--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,6 @@ model-api/__pycache__/ChatGPT_content.cpython-311.pyc
 model-api/__pycache__/ChatGPT_full.cpython-311.pyc
 model-api/__pycache__/ChatGPT_intent.cpython-311.pyc
 model-api/__pycache__/ChatGPT_short.cpython-311.pyc
+
+# databases
+*.db
